# csvw_functions_extra

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
csvw_functions_extra/: __init__.py  csvw_functions_extra.py
tests/: extra_tables-metadata.json  test_csvw_functions_extra.py
