[metadata]
name = csvw_functions_extra
version = 0.0.0
author = Steven Firth
author_email = s.k.firth@lboro.ac.uk
description = Python functions for CSVW files providing extra functionality beyond the CSVW standards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stevenkfirth/csvw_functions_extra
project_urls =
    Source = https://github.com/stevenkfirth/csvw_functions_extra
    Bug Tracker = https://github.com/stevenkfirth/csvw_functions_extra/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

